--- a/package.json
+++ b/package.json
@@ -17,5 +17,15 @@
     "url": "https://github.com/leojavier/jasmine/issues"
   },
   "homepage": "https://github.com/leojavier/jasmine#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.16",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-opera-launcher": "^0.3.0",
+    "karma-safari-launcher": "^0.1.1"
+  }
 }
