--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - "4.1"
   - "4.0"
   - "iojs"
-script: npm run ci
+before_script: node_modules/karma/bin/karma start test/karma.conf.js --single-run
+script: npm run test
 addons:
   sauce_connect: true
